--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><link href=./spin.png rel=icon><meta content="width=device-width" name=viewport><meta content="" http-equiv=content-security-policy><link href=./_app/immutable/assets/_page-77a734d3.css rel=stylesheet><link href=./_app/immutable/start-82ca61b4.js rel=modulepreload><link href=./_app/immutable/chunks/index-1664d19c.js rel=modulepreload><link href=./_app/immutable/chunks/singletons-90043bb3.js rel=modulepreload><link href=./_app/immutable/components/layout.svelte-e0888d8b.js rel=modulepreload><link href=./_app/immutable/modules/pages/_layout.ts-9cbb603b.js rel=modulepreload><link href=./_app/immutable/chunks/_layout-da46b06b.js rel=modulepreload><link href=./_app/immutable/components/pages/_page.svelte-2d6b0be1.js rel=modulepreload></head><body data-sveltekit-preload-data=hover style=margin:0><div style=display:contents><script data-sveltekit-hydrate=1wfcdm6 type=module>import { start } from "./_app/immutable/start-82ca61b4.js";
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><link href=./spin.png rel=icon><meta content="width=device-width" name=viewport><meta content="" http-equiv=content-security-policy><link href=./_app/immutable/start-0cdff2a2.js rel=modulepreload><link href=./_app/immutable/chunks/index-7014dcd9.js rel=modulepreload><link href=./_app/immutable/chunks/singletons-2d326a6c.js rel=modulepreload><link href=./_app/immutable/components/layout.svelte-179de059.js rel=modulepreload><link href=./_app/immutable/modules/pages/_layout.ts-9cbb603b.js rel=modulepreload><link href=./_app/immutable/chunks/_layout-da46b06b.js rel=modulepreload><link href=./_app/immutable/components/pages/_page.svelte-8119fc54.js rel=modulepreload></head><body data-sveltekit-preload-data=hover style=margin:0><div style=display:contents><svg height=600px width=600px><text dominant-baseline=middle font-family=Arial font-size=32 text-anchor=end transform="rotate(36 300 300)" x=525 y=300>Hello 0</text><text dominant-baseline=middle font-family=Arial font-size=32 text-anchor=end transform="rotate(144 300 300)" x=525 y=300>Hello 1</text><text dominant-baseline=middle font-family=Arial font-size=32 text-anchor=end transform="rotate(288 300 300)" x=525 y=300>Hello 2</text></svg><script data-sveltekit-hydrate=95rnip type=module>import { start } from "./_app/immutable/start-0cdff2a2.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1wfcdm6"]').parentNode,
-				version: "1674938365634",
+				target: document.querySelector('[data-sveltekit-hydrate="95rnip"]').parentNode,
+				version: "1674998040549",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
